--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "daterangepicker": "^3.0.3",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17"
   },
   "devDependencies": {
