--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-date-range-picker",
+  "name": "@gravitano/vue-date-range-picker",
   "version": "0.1.0",
   "scripts": {
     "serve": "vue-cli-service serve",
